crates/glyph-cli/tests/corpus/invalid/case_insensitive_effects.glyph
skill demo()
    description: "Demo."
    Effects:
        stdout
    flow:
        "Do."
